Avoid donate-sidebar on small screens.
The donate-sidebar overlaps with text on small screens.  This problem is
corrected herein by using @media for 500px screens to remove display of
the sidebar.

--- a/www/conservancy/static/conservancy.css
+++ b/www/conservancy/static/conservancy.css
@@ -33,6 +33,9 @@ text-decoration: none; color: #557733;
     right: 2%;
     width: 18%;
 }
+@media all and (max-width: 500px) {
+    .donate-sidebar { display: none; }
+}
 
 h1 { margin-top: .75em; margin-bottom: .5em; }
 h2 { margin-top: .75em; margin-bottom: .5em; }
